--- a/css/styles.css
+++ b/css/styles.css
@@ -74,14 +74,17 @@ body{
     background-color: var(--main-background_theme-1);
 }
 
-.main{
-    padding: 33.5px 0 0 0;
+.main{ 
+    padding: 27px 23px 29px 23px;
+    max-width: 375px; 
+    margin: 0 auto;
 }
 
 .header{
-    /*display: flex;
+    display: flex;
     justify-content: space-between;
-    align-items: flex-start;*/
+    align-items: flex-end;
+    margin-bottom: 32.8px;
 }
 
 .title,
@@ -92,17 +95,7 @@ body{
     color: var(--white-text_theme-1);
 }
 
-.title{
-    font-size: 1.98rem;
-}
-
-.switch-theme{
-    /*display: flex;
-    flex-flow: row nowrap;
-    gap: 30px;
-    align-items: flex-end;
-    */
-}
+.title{ font-size: 1.98rem; }
 
 .switch__description{
     text-transform: uppercase;
@@ -112,6 +105,18 @@ body{
 
 .description__options{
     font-size: 0.78rem;
+    width: 70px;
+    display: flex;
+    gap: 15px;
+    margin: 0 0 4px auto;
+    justify-content: center;
+}
+
+.switch__container{
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    gap: 25px;
 }
 
 .switch{
@@ -120,10 +125,9 @@ body{
     flex-flow: row nowrap;
     width: 70px;
     gap: 5px;
-    border-radius: 20px;
+    border-radius: 22px;
     align-items: center;
-    height: 26px;
-    padding: 0 5px;
+    height: 25.5px;
     position: relative;
 }
 
@@ -144,7 +148,7 @@ body{
     border-radius: 50%;
     background-color: var(--key-background__toggle_btn-result_theme-1);
     position: absolute;
-    left: 5.5px;
+    left: 4.5px;
     transition: all 0.3s;
 }
 
@@ -156,9 +160,86 @@ body{
     transform: translateX(42.5px);
 }
 
+.viewfinder{
+    background-color: var(--screen-background_theme-1);
+    color: var(--white-text_theme-1);
+    font-weight: 700;
+    font-style: normal;
+    font-size: 40.5px;
+    padding: 22.2px 24px 20px 24px;
+    border-radius: 10px;
+    text-align: right;
+    overflow-x: auto;
+    margin-bottom: 23px;
+}
 
+.keys{
+    background-color: var(--toggle-background__keypad-background_theme-1);
+    padding: 24px 24px 24px 24px;
+    display: grid;
+    grid-template-columns: repeat(4, 21.5%);
+    column-gap: 12.1px;
+    row-gap: 13px;
+    grid-auto-rows: 64px;
+    border-radius: 10px;
+}
 
+.button{
+    appearance: none;
+    padding: 0;
+    margin: 0;
+    display: block;
+    border: none;
+    font-weight: 700;
+    box-sizing: border-box;
+    border-radius: 7px;
+    border-bottom: 4px solid black;
+    padding: 8px 0 0 0;
+}
 
+.button__number, 
+.button__operator,
+.button__calculator:nth-of-type(13){
+    font-size: 32px;
+}
+
+.button__number,
+.button__operator,
+.button__calculator:nth-of-type(13){
+    background-color: var(--key-background_btn-number_theme-1);
+    border-color: var(--key-shadow_btn-number_theme-1);
+    color: var(--colors-btn-number_theme-1);
+}
+
+.button__calculator{
+    padding: 2.5px 0 0 0;
+    font-size: 20px;
+    letter-spacing: -0.1px;
+}
+
+.button__calculator:nth-of-type(13){
+    padding: 8px 0 0 0;
+}
+
+.button__calculator[value="RESET"]{
+    grid-column: 1/3;
+}
+
+.button__calculator[value="RESET"],
+.button__calculator[value="DEL"]{
+    background-color: var(--key-background_btn-del-reset_theme-1);
+    border-color: var(--key-shadow_btn-del-reset_theme-1);
+    color: var(--white-text_theme-1);
+}
+
+.button__result{
+    font-size: 20px;
+    padding: 2px 0 0 0;
+    background-color: var(--key-background__toggle_btn-result_theme-1);
+    border-color: var(--key-shadow_btn-result_theme-1);
+    color: var(--white-text_theme-1);
+    grid-column: 3/5;
+}
 
 
 
