--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,10 @@
   --colors-btn-text-numbers-result_text_theme-3: hsl(52, 100%, 62%);
   --colors-btn-text-result_theme-3: hsl(198, 20%, 13%);
   --white-text_theme-3: hsl(0, 0%, 100%);
+  /*active states*/
+  --hover-btn-result_switch-controler-theme03: #94FFF9;
+  --hover-btn-calculators-theme03: #8631B0;
+  --hover-btn-commons-theme03: #6B34AC;
 
   /**THEME VARIABLES WITH VALUES THEME 1**/
   --text-color: var(--white-text_theme-1);
@@ -210,8 +214,10 @@ body {
   padding: 22.2px 24px 20px 24px;
   border-radius: 10px;
   text-align: right;
-  overflow-x: auto;
+  /*overflow-x: auto;*/
   margin-bottom: 23px;
+  height: 88.78px;
+  overflow: auto;
 }
 
 .keys {
@@ -336,8 +342,7 @@ body {
   }
 }
 
-
-/*TODO: para criar o alternador de temas, cada option de data-theme ira atribuir novos valores as variaveis de tema*/
+/*theme 2*/
 [data-theme="2"] {
   /*backgrounds*/
   --bg-main: var(--main-background_theme-2);
@@ -371,6 +376,36 @@ body {
   transition: all 1s;
 }
 
-/*TODO: aplicar variaveis do thema 3 nas variaveis de thema para o tema 3*/
+/*theme 3*/
 [data-theme="3"] {
+  /*backgrounds*/
+  --bg-main: var(--main-background_theme-3);
+  --bg-switch_keys: var(--toggle-background__keypad-background__screen-background_theme-3);
+  --bg-screen: var(--toggle-background__keypad-background__screen-background_theme-3);
+  /*keys*/
+  /*key result*/
+  --bg-btn-result_switch-controler: var(
+    --key-background__toggle_btn-result_theme-3
+  );
+  --colors-shadow-border-btn-result: var(--key-shadow_btn-result_theme-3);
+  --text-colors-btn-result: var(--colors-btn-text-result_theme-3);
+  /*keys commons*/
+  --bg-number_operators: var(--key-background_btn-numbers_theme-3);
+  --bg-shadow-numbers_operators: var(--key-shadow_btn-numbers_theme-3);
+  --colors-text-number_operators: var(--colors-btn-text-numbers-result_text_theme-3);
+  /*keys calculators*/
+  --bg-btn-calculators: var(--key-background_btn-del-reset_theme-3);
+  --colors-shadow-border-btn-calculators: var(
+    --key-shadow_btn-del-reset-theme-3
+  );
+  --colors-text-btn-calculators: var(--white-text_theme-3);
+  /*text*/
+  --text-color: var(--colors-btn-text-numbers-result_text_theme-3);
+  /*active states*/
+  --colors-hover-switch-controler_btn-result: var(
+    --hover-btn-result_switch-controler-theme03
+  );
+  --colors-hover-btn-calculators: var(--hover-btn-calculators-theme03);
+  --colors-hover-btn-commons: var(--hover-btn-commons-theme03);
+  transition: all 1s;
 }
