--- a/css/styles.css
+++ b/css/styles.css
@@ -320,6 +320,7 @@ body {
     font-size: 57px;
     padding: 32.2px 24px 30px 24px;
     margin-bottom: 24px;
+    height: 127.75px;
   }
 
   .keys {
