--- a/css/styles.css
+++ b/css/styles.css
@@ -66,9 +66,9 @@
   --colors-btn-text-result_theme-3: hsl(198, 20%, 13%);
   --white-text_theme-3: hsl(0, 0%, 100%);
   /*active states*/
-  --hover-btn-result_switch-controler-theme03: #94FFF9;
-  --hover-btn-calculators-theme03: #8631B0;
-  --hover-btn-commons-theme03: #6B34AC;
+  --hover-btn-result_switch-controler-theme03: #94fff9;
+  --hover-btn-calculators-theme03: #8631b0;
+  --hover-btn-commons-theme03: #6b34ac;
 
   /**THEME VARIABLES WITH VALUES THEME 1**/
   --text-color: var(--white-text_theme-1);
@@ -298,7 +298,6 @@ body {
   background-color: var(--colors-hover-btn-commons);
 }
 
-
 /**BREAKPOINT 540px DESKTOP**/
 @media screen and (min-width: 586px) {
   .text__description-options {
@@ -381,8 +380,12 @@ body {
 [data-theme="3"] {
   /*backgrounds*/
   --bg-main: var(--main-background_theme-3);
-  --bg-switch_keys: var(--toggle-background__keypad-background__screen-background_theme-3);
-  --bg-screen: var(--toggle-background__keypad-background__screen-background_theme-3);
+  --bg-switch_keys: var(
+    --toggle-background__keypad-background__screen-background_theme-3
+  );
+  --bg-screen: var(
+    --toggle-background__keypad-background__screen-background_theme-3
+  );
   /*keys*/
   /*key result*/
   --bg-btn-result_switch-controler: var(
@@ -393,7 +396,9 @@ body {
   /*keys commons*/
   --bg-number_operators: var(--key-background_btn-numbers_theme-3);
   --bg-shadow-numbers_operators: var(--key-shadow_btn-numbers_theme-3);
-  --colors-text-number_operators: var(--colors-btn-text-numbers-result_text_theme-3);
+  --colors-text-number_operators: var(
+    --colors-btn-text-numbers-result_text_theme-3
+  );
   /*keys calculators*/
   --bg-btn-calculators: var(--key-background_btn-del-reset_theme-3);
   --colors-shadow-border-btn-calculators: var(
@@ -409,4 +414,83 @@ body {
   --colors-hover-btn-calculators: var(--hover-btn-calculators-theme03);
   --colors-hover-btn-commons: var(--hover-btn-commons-theme03);
   transition: all 1s;
+}
+
+/*TODO: para obter cores light pegar cada seletor de class dos elementos e colocar dentro do media corepondende com a variavel de cor correta*/
+@media (prefers-color-scheme: light) {
+  /*theme 2*/
+  :root {
+    /*backgrounds*/
+    --bg-main: var(--main-background_theme-2);
+    --bg-switch_keys: var(--toggle-background__keypad-background_theme-2);
+    --bg-screen: var(--screen-background_theme-2);
+    /*keys*/
+    /*key result*/
+    --bg-btn-result_switch-controler: var(
+      --key-background__toggle_btn-result_theme-2
+    );
+    --colors-shadow-border-btn-result: var(--key-shadow_btn-result_theme-2);
+    --text-colors-btn-result: var(--white-text_theme-2);
+    /*keys commons*/
+    --bg-number_operators: var(--key-background_btn-number_theme-2);
+    --bg-shadow-numbers_operators: var(--key-shadow_btn-number_theme-1);
+    --colors-text-number_operators: var(--colors-btn-number_theme-2);
+    /*keys calculators*/
+    --bg-btn-calculators: var(--key-background_btn-del-reset_theme-2);
+    --colors-shadow-border-btn-calculators: var(
+      --key-shadow_btn-del-reset_theme-2
+    );
+    --colors-text-btn-calculators: var(--white-text_theme-2);
+    /*text*/
+    --text-color: var(--colors-btn-number_theme-2);
+    /*active states*/
+    --colors-hover-switch-controler_btn-result: var(
+      --hover-btn-result_switch-controler
+    );
+    --colors-hover-btn-calculators: var(--hover-btn-calculators);
+    --colors-hover-btn-commons: var(--hover-btn-commons);
+    transition: all 1s;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  /*theme 3*/
+  :root {
+    /*backgrounds*/
+    --bg-main: var(--main-background_theme-3);
+    --bg-switch_keys: var(
+      --toggle-background__keypad-background__screen-background_theme-3
+    );
+    --bg-screen: var(
+      --toggle-background__keypad-background__screen-background_theme-3
+    );
+    /*keys*/
+    /*key result*/
+    --bg-btn-result_switch-controler: var(
+      --key-background__toggle_btn-result_theme-3
+    );
+    --colors-shadow-border-btn-result: var(--key-shadow_btn-result_theme-3);
+    --text-colors-btn-result: var(--colors-btn-text-result_theme-3);
+    /*keys commons*/
+    --bg-number_operators: var(--key-background_btn-numbers_theme-3);
+    --bg-shadow-numbers_operators: var(--key-shadow_btn-numbers_theme-3);
+    --colors-text-number_operators: var(
+      --colors-btn-text-numbers-result_text_theme-3
+    );
+    /*keys calculators*/
+    --bg-btn-calculators: var(--key-background_btn-del-reset_theme-3);
+    --colors-shadow-border-btn-calculators: var(
+      --key-shadow_btn-del-reset-theme-3
+    );
+    --colors-text-btn-calculators: var(--white-text_theme-3);
+    /*text*/
+    --text-color: var(--colors-btn-text-numbers-result_text_theme-3);
+    /*active states*/
+    --colors-hover-switch-controler_btn-result: var(
+      --hover-btn-result_switch-controler-theme03
+    );
+    --colors-hover-btn-calculators: var(--hover-btn-calculators-theme03);
+    --colors-hover-btn-commons: var(--hover-btn-commons-theme03);
+    transition: all 1s;
+  }
 }
